--- a/LaslesVPN/html/LaslesVPN.html
+++ b/LaslesVPN/html/LaslesVPN.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/LaslesVPN.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
   <div class="hero" id="hero">
@@ -32,19 +33,19 @@
                 <p>Provide a network for all your needs with ease and fun using LaslesVPN discover interesting features from us.</p>
                 <button class="primary">Get Started</button>
               </div>
-              <div>
+              <div data-aos="fade-left">
                 <img src="../png/Illustration 1.png" alt="">
               </div>
           </div>
       </div>
   </div> 
-  <div class="numbers">
+  <div class="numbers" data-aos="fade-up"  data-aos-delay="400">
       <div class="container shadow">
           <div class="numbers__inner">
               <div class="numbers_card">
                 <img src="../svg/user.svg" alt="">
                 <div>
-                    <h4>90+</h4>
+                    <h4 data-value="90">0</h4>
                     <p>Users</p>
                 </div>
               </div>
@@ -52,7 +53,7 @@
               <div class="numbers_card">
                 <img src="../svg/location.svg" alt="">
                 <div>
-                    <h4>30+</h4>
+                    <h4 data-value="30">0</h4>
                     <p>Locations</p>
                 </div>
               </div>
@@ -60,21 +61,21 @@
               <div class="numbers_card">
                 <img src="../svg/Server.svg" alt="">
                 <div>
-                    <h4>50+</h4>
+                    <h4 data-value="50"></h4>
                     <p>Servers</p>
                 </div>
               </div>
           </div>
       </div>
   </div>
-  <div class="features" id="features">
+  <div class="features" id="features"  data-aos="fade-up" > 
           <div class="container">
               <div class="features__inner">
                 <div>
                     <img src="../svg/Illustration 2.svg" alt="">
 
                 </div>
-                <div class="features_content">
+                <div class="features_content" data-aos="fade-left" data-aos-delay="600">
                     <h3>We Provide Many Features You Can Use</h3>
                     <p>You can explore the features that we provide with fun and have their own functions each feature.</p>
                     <ul class="checkbox">
@@ -88,13 +89,13 @@
           </div>
   </div>
   <div class="gradient">
-    <div class="plan" id="pricing">
+    <div class="plan" id="pricing"  data-aos="fade-up">
             <div class="container">
                 <div class="plan__inner">
                     <h3 class="section_title">Choose Your Plan</h3>
                     <p class="section_subtitle">Let's choose the package that is best for you and explore it happily and cheerfully.</p>
                     <div class="plan_stack">
-                        <div class="plan_card">
+                        <div class="plan_card"  data-aos="fade-up">
                             <div  class="plan_img">
                                 <img src="../svg/Free.svg" alt="">
                             </div>
@@ -112,7 +113,7 @@
                                 <button class="secondary">Select</button>
                             </div>
                         </div>
-                        <div class="plan_card">
+                        <div class="plan_card"  data-aos="fade-up" data-aos-delay="300">
                             <div class="plan_img">
                                 <img src="../svg/Standard.svg" alt="">
                             </div>
@@ -131,7 +132,7 @@
                                 <button class="secondary">Select</button>
                             </div>
                         </div>
-                        <div class="plan_card">
+                        <div class="plan_card"  data-aos="fade-up" data-aos-delay="600">
                             <div class="plan_img">
                                 <img  src="../svg/Premium.svg" alt="">
                             </div>
@@ -157,101 +158,100 @@
                 </div>
             </div>
     </div>
-    <div class="network" id="network">
+    <div class="network" id="network"  data-aos="fade-up">
         <div class="container">
             <div class="network__inner">
                 <h3 class="section_title">Huge Global Network of Fast VPN</h3>
                 <p class="section_subtitle">See LaslesVPN everywhere to make it easier for you when you move locations.</p>
-                <div class="map">
+                <div class="map"  data-aos="fade-up">
 
-                    <div title="City" class="network-dot south-america-up">
+                    <div title="Columbia" class="network-dot south-america-up">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot south-america-middle">
+                    <div title="Paraguay" class="network-dot south-america-middle">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot south-america-right">
+                    <div title="Brazil" class="network-dot south-america-right">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot south-america-down">
+                    <div title="Argentina" class="network-dot south-america-down">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot north-america-left">
+                    <div title="Alaska" class="network-dot north-america-left">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot north-america-up-middle">
+                    <div title="Yukon" class="network-dot north-america-up-middle">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot north-america-up-right">
+                    <div title="Nunayut" class="network-dot north-america-up-right">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot north-america-middle">
+                    <div title="Alberta" class="network-dot north-america-middle">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot north-america-right">
+                    <div title="Quebec" class="network-dot north-america-right">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot north-america-down-right">
+                    <div title="Georgia" class="network-dot north-america-down-right">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot north-america-down">
+                    <div title="Mexico" class="network-dot north-america-down">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot greenland-left">
+                    <div title="Greenland" class="network-dot greenland-left">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot greenland-middle">
+                    <div title="Greenland" class="network-dot greenland-middle">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot greenland-down">
+                    <div title="Greenland" class="network-dot greenland-down">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot greenland-right">
+                    <div title="Greenland" class="network-dot greenland-right">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot asia-up" >
-                        <imgsrc="../svg/network-dot.svg" alt="">
-                    </div>
-                    <div title="City" class="network-dot asia-middle">
+                    <div title="Yamalo-Nenets" class="network-dot asia-up" >
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot asia-down-left">
+                    <div title="Mongolia" class="network-dot asia-middle">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot asia-down">
+                    <div title="India" class="network-dot asia-down-left">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot asia-middle-right">
+                    <div title="China" class="network-dot asia-down">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot asia-right">
-                        <img src="../svg/network-dot.svg" alt="">
-
-                    </div>
-                    <div title="City" class="network-dot europe-up">
+                    <div title="Sakha Republic" class="network-dot asia-middle-right">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot europe-middle">
+                    <div title="Chukotka" class="network-dot asia-right">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot europe-right">
-                        <img src="../svg/network-dot.svg" alt="">
-
-                    </div>
-                    <div title="City" class="network-dot australia-left">
+                    <div title="Norway" class="network-dot europe-up">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot australia-down">
+                    <div title="Romania" class="network-dot europe-middle">
+                        <img src="../svg/network-dot.svg" alt="">
+                    </div>
+                    <div title="Kazakhstan" class="network-dot europe-right">
                         <img src="../svg/network-dot.svg" alt="">
 
                     </div>
-                    <div title="City" class="network-dot africa-left">
+                    <div title="Western Australia" class="network-dot australia-left">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot africa-center">
+                    <div title="Victoria" class="network-dot australia-down">
+                        <img src="../svg/network-dot.svg" alt="">
+
+                    </div>
+                    <div title="mali" class="network-dot africa-left">
                         <img src="../svg/network-dot.svg" alt="">
                     </div>
-                    <div title="City" class="network-dot africa-down">
+                    <div title="Chad" class="network-dot africa-center">
+                        <img src="../svg/network-dot.svg" alt="">
+                    </div>
+                    <div title="Botswana" class="network-dot africa-down">
                         <img  src="../svg/network-dot.svg" alt="">
                     </div>
 
@@ -278,13 +278,13 @@
         </div>
     </div>
   </div>
-  <div class="customers" id="testimonials">
+  <div class="customers" id="testimonials" data-aos="fade-up">
     <div class="container">
-        <div class="customer__inner">
+        <div class="customer__inner" >
             <h3 class="section_title">Trusted by Thousands of<br/> Happy Customer</h3>
             <p class="section_subtitle">These are the stories of our customers who have joined us with great pleasure when using this crazy feature.</p>
             <div class="wrapper">
-                <div class="customer_stack">
+                <div class="customer_stack shifted">
                     <div class="customer_card card-active">
                         <div class="customer_card_top">
                             <div class="customer_card_top_info">
@@ -445,7 +445,7 @@
   </div>
   <div class="footer">
       <div class="container shadow">
-                <div class="cta__inner">
+                <div class="cta__inner"  data-aos="fade-up" data-aos-delay="600">
                     <div class="cta_content">
                         <h3>Subscribe Now for Get Special Features!</h3>
                         <p>Let's subscribe with us and find the fun.</p>
@@ -494,7 +494,16 @@
       </div>
   </div>
 </div>
-
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init({
+      duration: 1200, // values from 0 to 3000, with step 50ms
+      easing: 'ease', // default easing for AOS animations
+      once: false, // whether animation should happen only once - while scrolling down
+      mirror: false, // whether elements should animate out while scrolling past them
+    });
+  </script>
 <script src="../js/lasles.js"></script>
+
 </body>
 </html>
