qr code project

--- a/index.html
+++ b/index.html
@@ -155,6 +155,13 @@
                     <p>Try to reach the image with a mouse.</p>
                 </div>
             </a>
+            <a href="qr-code-component-main/index.html" target="_blank" class="item">
+                <img src="img/qr.png" alt="">
+                <div class="item-inner">
+                    <h3>QR code</h3>
+                    <p>Try to reach the image with a mouse.</p>
+                </div>
+            </a>
         </div>
     </div>
 </body>
