--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -8,7 +8,7 @@
   <title>QR code component</title>
 </head>
 <body>
-  <main class="container" role="contentinfo">
+  <main class="container">
     <img src="images/image-qr-code.png" alt="Qr code">
     <div class="content">
       <h1>Improve your front-end skills by building projects</h1>
