--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <div class="hero-container">
             <h1>Projects</h1>
+            <p>Contact me: hello.leskiv@gmail.com</p>
         </div>
         <div class="items-container">
             <a href="quote-generator/index.html" target="_blank"class="item">
@@ -160,6 +161,13 @@
                 <div class="item-inner">
                     <h3>QR code</h3>
                     <p>Try to reach the image with a mouse.</p>
+                </div>
+            </a>
+            <a href="sunnyside-agency-landing-page-main/index.html" target="_blank" class="item">
+                <img src="img/sunnyside.png" alt="">
+                <div class="item-inner">
+                    <h3>Sunnyside Agency Landing Page</h3>
+                    <p>Fully responsive mobile first development</p>
                 </div>
             </a>
         </div>
