updates after report

--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -15,11 +15,11 @@
         <a class="logo" href="#">
           <img src="images/logo.svg" alt="Sunnyside logo">
         </a>
-        <div class="nav-items nav-mobile" id="mobileNav">
-          <a href="#">About</a>
-          <a href="#">Services</a>
-          <a href="#">Projects</a>
-          <a href="#" class="button">Contact</a>
+        <div class="nav-items" id="mobileNav">
+          <a href=".">About</a>
+          <a href=".">Services</a>
+          <a href=".">Projects</a>
+          <a href="." class="button">Contact</a>
         </div>
         <div class="hamburger-icon" id="burgerIcon">
           <img src="images/icon-hamburger.svg" alt="">
@@ -123,10 +123,10 @@
     </div>
   </footer>
 
-  <div class="attribution">
+  <contentinfo class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://olha-leskiv.github.io/js-projects/">Olha Leskiv</a>.
-  </div>
+  </contentinfo>
 
   <script src="js/script.js"></script>
 </body>
