--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@
                     <p>Fully responsive mobile first development</p>
                 </div>
             </a>
+            <a href="todo-app-main/index.html" target="_blank" class="item">
+                <img src="img/to-do.png" alt="">
+                <div class="item-inner">
+                    <h3>To do list</h3>
+                    <p>Add / remove items. Light / Dark theme. Local Storage. Drag-n-drop. Filter items.</p>
+                </div>
+            </a>
         </div>
     </div>
 </body>
