small updates. Also added readme to todo project.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
             <p>Contact me: hello.leskiv@gmail.com</p>
         </div>
         <div class="items-container">
+            <a href="todo-app-main/index.html" target="_blank" class="item">
+                <img src="img/to-do.png" alt="">
+                <div class="item-inner">
+                    <h3>To do list</h3>
+                    <p>Add / remove items. Light / Dark theme. Local Storage. Drag-n-drop. Filter items.</p>
+                </div>
+            </a>
+            <a href="LaslesVPN/html/LaslesVPN.html" target="_blank" class="item">
+                <img src="img/lasles.png" alt="">
+                <div class="item-inner">
+                    <h3>Lasles VPN</h3>
+                    <p>Landing page.</p>
+                </div>
+            </a>
+            <a href="sunnyside-agency-landing-page-main/index.html" target="_blank" class="item">
+                <img src="img/sunnyside.png" alt="">
+                <div class="item-inner">
+                    <h3>Sunnyside Agency Landing Page</h3>
+                    <p>Fully responsive mobile first development</p>
+                </div>
+            </a>
             <a href="quote-generator/index.html" target="_blank"class="item">
                 <img src="img/quote.png" alt="">
                 <div class="item-inner">
@@ -30,11 +51,39 @@
                     <p>Scroll down a get new images from Unsplash.</p>
                 </div>
             </a>
-            <a href="picture-in-picture/index.html" target="_blank" class="item">
-                <img src="img/picture.png" alt="">
+            <a href="music-player/index.html" target="_blank" class="item">
+                <img src="img/audioplayer.png" alt="">
                 <div class="item-inner">
-                    <h3>Picture in Picture</h3>
-                    <p>You can make a picture-in-picture preview from your tab.</p>
+                    <h3>Music Player</h3>
+                    <p>Absolutely custom audio player.</p>
+                </div>
+            </a>
+            <a href="drag-and-drop/index.html" target="_blank" class="item">
+                <img src="img/kanban.png" alt="">
+                <div class="item-inner">
+                    <h3>Kanban Board</h3>
+                    <p>Simplefied though still quite effective kanban board.</p>
+                </div>
+            </a>
+            <a href="nasa-api-pictures/index.html" target="_blank" class="item">
+                <img src="img/nasa.png" alt="">
+                <div class="item-inner">
+                    <h3>NASA Articles</h3>
+                    <p>Get the coolest images from NASA website.</p>
+                </div>
+            </a>
+            <a href="calculator/index.html" target="_blank" class="item">
+                <img src="img/calculator.png" alt="">
+                <div class="item-inner">
+                    <h3>Calculator</h3>
+                    <p>Ґрунт, База, так би мовити — Основа, Стрижень, Наріжний камінь і Фундамент, Твердиня, Осердя, Підвалина, Моноліт, Літосферна плита, Серцевина, Опора.</p>
+                </div>
+            </a>
+            <a href="css-animations/buttons.html" target="_blank" class="item">
+                <img src="img/buttons.png" alt="">
+                <div class="item-inner">
+                    <h3>Buttons CSS Animations</h3>
+                    <p>Hover over any button to see some magic.</p>
                 </div>
             </a>
             <a  href="joke-teller/index.html" target="_blank" class="item">
@@ -44,32 +93,46 @@
                     <p>Random joke from a cute robot.</p>
                 </div>
             </a>
-            <a href="light-dark-mode/index.html" target="_blank" class="item">
+            <a href="video-player/index.html" target="_blank" class="item">
+                <img src="img/video-player.png" alt="">
+                <div class="item-inner">
+                    <h3>Custom Video Player</h3>
+                    <p>Absolutely custom video player.</p>
+                </div>
+            </a>
+            <a href="spock-rock-game/index.html" target="_blank" class="item">
+                <img src="img/rock-spock.png" alt="">
+                <div class="item-inner">
+                    <h3>Spock-Rock Game</h3>
+                    <p>Play Rock, Paper, Scissors, Lizard, Spock if you dare.</p>
+                </div>
+            </a>
+            <a href="picture-in-picture/index.html" target="_blank" class="item">
+                <img src="img/picture.png" alt="">
+                <div class="item-inner">
+                    <h3>Picture in Picture</h3>
+                    <p>You can make a picture-in-picture preview from your tab.</p>
+                </div>
+            </a>
+            <!-- <a href="light-dark-mode/index.html" target="_blank" class="item">
                 <img src="img/darkLight.png" alt="">
                 <div class="item-inner">
                     <h3>Light and Dark Theme</h3>
                     <p>Change toggle to see light and dark version of a website.</p>
                 </div>
-            </a>
-            <a href="animated-template/index.html" target="_blank" class="item">
+            </a> -->
+            <!-- <a href="animated-template/index.html" target="_blank" class="item">
                 <img src="img/animated-template.png" alt="">
                 <div class="item-inner">
                     <h3>Animated Template</h3>
                     <p>Library for easy animations.</p>
                 </div>
-            </a>
+            </a> -->
             <a href="animated-navigation/index.html" target="_blank" class="item">
                 <img src="img/navigation.png" alt="">
                 <div class="item-inner">
                     <h3>Animated Navigation</h3>
                     <p>Cool navigation appearance.</p>
-                </div>
-            </a>
-            <a href="music-player/index.html" target="_blank" class="item">
-                <img src="img/audioplayer.png" alt="">
-                <div class="item-inner">
-                    <h3>Music Player</h3>
-                    <p>Absolutely custom audio player.</p>
                 </div>
             </a>
             <a href="custom-countdown/index.html" target="_blank" class="item">
@@ -93,60 +156,11 @@
                     <p>All inputs are under control.</p>
                 </div>
             </a>
-            <a href="calculator/index.html" target="_blank" class="item">
-                <img src="img/calculator.png" alt="">
-                <div class="item-inner">
-                    <h3>Calculator</h3>
-                    <p>Ґрунт, База, так би мовити — Основа, Стрижень, Наріжний камінь і Фундамент, Твердиня, Осердя, Підвалина, Моноліт, Літосферна плита, Серцевина, Опора.</p>
-                </div>
-            </a>
-            <a href="drag-and-drop/index.html" target="_blank" class="item">
-                <img src="img/kanban.png" alt="">
-                <div class="item-inner">
-                    <h3>Kanban Board</h3>
-                    <p>Simplefied though still quite effective kanban board.</p>
-                </div>
-            </a>
-            <a href="LaslesVPN/html/LaslesVPN.html" target="_blank" class="item">
-                <img src="img/lasles.png" alt="">
-                <div class="item-inner">
-                    <h3>Lasles VPN</h3>
-                    <p>Landing page.</p>
-                </div>
-            </a>
-            <a href="nasa-api-pictures/index.html" target="_blank" class="item">
-                <img src="img/nasa.png" alt="">
-                <div class="item-inner">
-                    <h3>NASA Articles</h3>
-                    <p>Get the coolest images from NASA website.</p>
-                </div>
-            </a>
-            <a href="spock-rock-game/index.html" target="_blank" class="item">
-                <img src="img/rock-spock.png" alt="">
-                <div class="item-inner">
-                    <h3>Spock-Rock Game</h3>
-                    <p>Play Rock, Paper, Scissors, Lizard, Spock if you dare.</p>
-                </div>
-            </a>
             <a href="Trafalgar/index.html" target="_blank" class="item">
                 <img src="img/trafalgar.png" alt="">
                 <div class="item-inner">
                     <h3>Trafalgar Landing Page</h3>
                     <p>Landing page.</p>
-                </div>
-            </a>
-            <a href="video-player/index.html" target="_blank" class="item">
-                <img src="img/video-player.png" alt="">
-                <div class="item-inner">
-                    <h3>Custom Video Player</h3>
-                    <p>Absolutely custom video player.</p>
-                </div>
-            </a>
-            <a href="css-animations/buttons.html" target="_blank" class="item">
-                <img src="img/buttons.png" alt="">
-                <div class="item-inner">
-                    <h3>Buttons CSS Animations</h3>
-                    <p>Hover over any button to see some magic.</p>
                 </div>
             </a>
             <a href="css-animations/images.html" target="_blank" class="item">
@@ -163,20 +177,8 @@
                     <p>Try to reach the image with a mouse.</p>
                 </div>
             </a>
-            <a href="sunnyside-agency-landing-page-main/index.html" target="_blank" class="item">
-                <img src="img/sunnyside.png" alt="">
-                <div class="item-inner">
-                    <h3>Sunnyside Agency Landing Page</h3>
-                    <p>Fully responsive mobile first development</p>
-                </div>
-            </a>
-            <a href="todo-app-main/index.html" target="_blank" class="item">
-                <img src="img/to-do.png" alt="">
-                <div class="item-inner">
-                    <h3>To do list</h3>
-                    <p>Add / remove items. Light / Dark theme. Local Storage. Drag-n-drop. Filter items.</p>
-                </div>
-            </a>
+
+
         </div>
     </div>
 </body>
