--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <img src="img/scroll.png" alt="">
                 <div class="item-inner">
                     <h3>Infinite Scroll</h3>
-                    <p>Scroll down a get new images from Unsplash.</p>
+                    <p>Scroll down to get new images from Unsplash.</p>
                 </div>
             </a>
             <a href="music-player/index.html" target="_blank" class="item">
