--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="hero-container">
             <h1>Projects</h1>
             <p>Contact me: hello.leskiv@gmail.com</p>
+            <p>Also, you may be interested in my <span><a target="_blank" href="https://olha-leskiv.github.io/design-portfolio/">Design portfolio</a></span></p>
         </div>
         <div class="items-container">
             <a href="todo-app-main/index.html" target="_blank" class="item">
